--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h3>Adrián Sánchez</h3>
 				<h4>Mis pasiones: tecnología, ciencia, videojuegos y fútbol. Amante de la programación y lector por convicción.</h4>
 				<p>Originario de Cancún, Quintana Roo, México. Estudiante de Ingeniería en Tecnologías de la Información y Comunicación por la <strong>Universidad Técnologíca de Cancún. </strong>Apasionado de la tecnología, software, ingeniería y la web. Lector y seguidor de los Pumas.<br>
-					Trabajo como Freelancer para empresas y/o colaboro en proyectos geniales.<strong> ¡Hagamos algo juntos y pongamos nuestro granito de arena al mundo! .</strong>
+					Trabajo como Freelancer para empresas y/o colaboro en proyectos geniales.<strong> ¡Hagamos algo juntos! :)</strong>
 					<br>
 					<div class="col-md-3">
 						<h5>Lenguajes</h5>
