--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			<ul class="top-nav nav_list">
 				<li class="page-scroll"><a href="#about">Sobre mí</a></li>
 				<li class="page-scroll"><a href="#portafolio">Portafolio</a></li>
+				<li>Lectura</li>
 			  <li class="page-scroll"><a href="http://adriansanchez.net">Blog</a></li>
 				<li class="page-scroll"><a href="#contact">Contacto</a></li>
 			</ul>
@@ -127,7 +128,7 @@
 		 	 <div class="grids_of_4 row">
 					<div class="col-md-3 images_1_of_4">
 						<div class="fancyDemo">
-							<a rel="group" title="" href="images/pic1.jpg"><img src="images/pic1.jpg" alt=""class="img-responsive"/></a>
+							<a rel="group" title="" href="images/pic1.jpg"><img src="images/small.png" alt=""class="img-responsive"/></a>
 						</div>
 						 <h3><a href="#">TUTOR</a></h3>
 						 <p class="para">Sistema para el control y seguimiento de alumnos en la UT Cancún.</p>
